docs: add summary and skills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 			<section class="section" id="profile">
 				<h1 class="section-title">Kseniya Pereguda</h1>
 				<img class="photo" src="my_photo.jpg" alt="my photo">
-
 			</section>
 			
 			<section class="section" id="contacts">
@@ -41,6 +40,25 @@
 				<li class="contacts-item"> e-mail: ksyusha_pereguda@mail.ru;</li>
 				<li class="contacts-item">GitHub: KseniyaPereguda;</li>
 			</ul>
+			</section>
+
+			<section class="section" id="summary">
+				<h2>Summary</h2>
+				<p>
+					I am a self-motivated and responsible person who can work well alone or in a team. I have good listening and communication skills. I am always ready to develop new skills.
+				</p>
+			</section>
+
+			<section class="section" id="skills">
+				<h2>Skills</h2>
+				<ul>
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>JavaScript (Basic)</li>
+					<li>GIT, GitHub</li>
+					<li>Figma, Photoshop</li>
+				</ul>
+         
 			</section>
 		</div>
 
