--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
 					<li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
 					<li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-					<li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+					<li class="nav-item"><a href="#languages" class="nav-link">English</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -57,6 +57,46 @@
 					<li>JavaScript (Basic)</li>
 					<li>GIT, GitHub</li>
 					<li>Figma, Photoshop</li>
+				</ul>
+			</section>
+
+			<section class="section" id="code">
+            <h2>Code</h2>
+				<code>
+				<pre>
+					var min = function(list) {
+						let min = list[0];
+						for (let i = 0; i < list.length; i++) {
+						if (list[i] < min) {
+							min = list[i]
+						}
+						}
+						return min;
+					}
+			
+					var max = function(list) {
+						let max = list[0];
+						for (let i = 0; i < list.length; i++) {
+						if (list[i] > max) {
+							max = list[i]
+						}
+						}
+						return max;
+					}
+				</pre>
+				</code>
+			</section>
+
+			<section class="section" id="education">
+				<h2>Education</h2>
+				<span>University: VSMU</span>
+			</section>
+
+			<section class="section" id="languages">
+				<h2>Languages</h2>
+				<ul>
+					<li>Russian (Native)</li>
+					<li>English (A2)</li>
 				</ul>
          
 			</section>
